<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sell_property">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:text="@string/habitat"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/pinkColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_property_details"
        android:layout_marginLeft="40dp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/pinkColor"
        android:textSize="15sp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="100dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/owner_name"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="130dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName|textEmailAddress"
            android:id="@+id/Owner"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/property_name"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="200dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName|textEmailAddress"
            android:id="@+id/Prop_name"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/price"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="270dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName|textEmailAddress"
            android:id="@+id/Price"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="200dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        android:hint="@string/bhk_s"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filled"
            android:inputType="none"
            >
        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="200dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        android:hint="@string/type"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/filled_e"
            android:inputType="none">

        </AutoCompleteTextView>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:layout_marginLeft="40dp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textColor="@color/pinkColor"
        android:textSize="15sp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="460dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/address"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="490dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textPersonName|textEmailAddress"
            android:id="@+id/Address"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/pincode"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="560dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/Pincode"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/city"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="630dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="text"
            android:id="@+id/city"
            android:ems="10"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textStyle="normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:hint="@string/state"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="700dp"
        app:shapeAppearance="@style/Button4"
        app:boxStrokeColor="#4E4A4A"
        app:boxStrokeWidth="1dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="normal" />

    </com.google.android.material.textfield.TextInputLayout>
        <ImageView
            android:id="@+id/coverimg"
            android:layout_marginTop="790dp"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"/>
    <Button
        android:id="@+id/post"
        android:text="@string/Submit"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:elevation="15dp"
        android:gravity="center"
        android:layout_marginTop="1000dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/textColor"
        android:layout_gravity="center"
        app:shapeAppearanceOverlay="@style/Button5"
        app:backgroundTint="@color/pinkColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
        
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/ftab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="930dp"
            android:layout_marginStart="300dp"
            android:src="@drawable/camera_enhance_24"
            android:backgroundTint="@color/pinkColor"
            />
    </RelativeLayout>

    
</ScrollView>
