<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_marginBottom="10dp">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardElevation="20dp"
        app:cardCornerRadius="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/bgIMG"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:src="@drawable/logo"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forr"
                    android:textColor="@color/pinkColor"
                    android:textStyle="normal|bold"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    />
                <TextView
                    android:id="@+id/SaleorRent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale"
                    android:textColor="@color/pinkColor"
                    android:textStyle="normal|bold"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="4dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/Prop_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/property_name"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/City1"
                    android:drawableStart="@drawable/ic_baseline_add_location_24"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    />
                <TextView
                    android:id="@+id/Price1"
                    android:drawableStart="@drawable/ic_baseline_currency_rupee_24"
                    android:drawablePadding="5dp"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="100dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/no_Of_bhk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bhk_s"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"/>

                <LinearLayout
                    android:layout_marginStart="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/toll_free"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="17sp"
                        android:fontFamily="sans-serif"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nummm"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="17sp"
                        android:fontFamily="sans-serif"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp">
                <TextView
                    android:drawableStart="@drawable/ic_baseline_add_location_24"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/Address1"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pincode"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="60dp"/>
                <TextView
                    android:id="@+id/Pincode1"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/pincode"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"/>
                <TextView
                    android:id="@+id/State1"
                    android:layout_width="wrap_content"
                    android:drawablePadding="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:textSize="17sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>